[gd_scene load_steps=4 format=3 uid="uid://daryg6b4ts4x5"]

[ext_resource type="Script" uid="uid://bopjns3ajv8cp" path="res://scripts/TimerManager.gd" id="1_5ysmq"]
[ext_resource type="Texture2D" uid="uid://bldakb2hgggl0" path="res://assets/art/btn_pause.png" id="1_oo0fn"]
[ext_resource type="Texture2D" uid="uid://bb3of2acpemj2" path="res://characters/Virgilio/virgilio3.png" id="3_5ysmq"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
layer = 10

[node name="TimerManager" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("1_5ysmq")

[node name="Timer" type="Timer" parent="TimerManager"]
process_mode = 1

[node name="UI_Timer" type="CanvasLayer" parent="TimerManager"]

[node name="HBoxContainer" type="HBoxContainer" parent="TimerManager/UI_Timer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 120.0
mouse_filter = 2
theme_override_constants/separation = 10

[node name="LabelTiempo" type="Label" parent="TimerManager/UI_Timer/HBoxContainer"]
layout_mode = 2
text = "tiempo"

[node name="TextureButtonPause" type="TextureButton" parent="TimerManager/UI_Timer/HBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_direction = 2
layout_mode = 2
tooltip_text = "pausar"
texture_normal = ExtResource("1_oo0fn")
ignore_texture_size = true
stretch_mode = 5

[node name="VirgilioButton" type="TextureButton" parent="TimerManager/UI_Timer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Virgilio"
focus_mode = 0
texture_normal = ExtResource("3_5ysmq")
ignore_texture_size = true
stretch_mode = 5

[node name="PanelGameOver" type="Panel" parent="TimerManager/UI_Timer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelGameOver" type="Label" parent="TimerManager/UI_Timer/PanelGameOver"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 400.0
offset_top = 200.0
offset_right = 900.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Nivel no completado :("
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonReintentar" type="Button" parent="TimerManager/UI_Timer/PanelGameOver"]
layout_mode = 0
offset_left = 200.0
offset_top = 400.0
offset_right = 500.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 30
text = "Reintentar nivel"

[node name="BotonMenu" type="Button" parent="TimerManager/UI_Timer/PanelGameOver"]
layout_mode = 0
offset_left = 700.0
offset_top = 400.0
offset_right = 1000.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 30
text = "Menu"

[node name="PanelGamePaused" type="Panel" parent="TimerManager/UI_Timer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelGamePaused" type="Label" parent="TimerManager/UI_Timer/PanelGamePaused"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 400.0
offset_top = 200.0
offset_right = 900.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Juego pausado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonReanudar" type="Button" parent="TimerManager/UI_Timer/PanelGamePaused"]
layout_mode = 0
offset_left = 200.0
offset_top = 400.0
offset_right = 500.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 30
text = "Reanudar"

[node name="BotonMenu" type="Button" parent="TimerManager/UI_Timer/PanelGamePaused"]
layout_mode = 0
offset_left = 700.0
offset_top = 400.0
offset_right = 1000.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 30
text = "Menu"
